Added toggle favorite project, worked on features
